--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/slider": "^3.0.3",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
     "react": "17.0.1",
-    "react-input-range": "^1.3.0",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.7.2",
@@ -23,6 +23,7 @@
     "react-native-screens": "^3.0.0",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-web-swiper": "^2.2.1",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5"
   },
